debathena-pam-config (1.4) unstable; urgency=low

  * Convert (partially) to the new config-package-dev interface

 -- Shreevatsa R <vatsa@mit.edu>  Sun,  6 Apr 2008 20:51:08 -0400

debathena-pam-config (1.3debathena5) unstable; urgency=low

  * Make access.conf.append mimic Athena workstations more closely.

 -- Tim Abbott <tabbott@mit.edu>  Fri,  1 Feb 2008 18:21:09 -0500

debathena-pam-config (1.3debathena4) unstable; urgency=low

  * Only set XAUTHORITY in /etc/pam.d/ssh due to gdm problems.
  * Correctly clean auto-generated debian/access.conf.debathena

 -- Tim Abbott <tabbott@mit.edu>  Thu, 24 Jan 2008 22:31:23 -0500

debathena-pam-config (1.3debathena3) unstable; urgency=low

  * Replace pam_xauthority.so with more general pam_mktemp.so
  * Use pam_mktemp.so to create/set ATHENA_SESSION_TMPDIR
  * Use nss_nonlocal 1.3 to give better /etc/security/access.conf
    default for private workstations: access is allowed if and only if
    the user has a local account on the system

 -- Tim Abbott <tabbott@mit.edu>  Tue, 22 Jan 2008 22:02:50 -0500

debathena-pam-config (1.3debathena2) unstable; urgency=low

  * Add /etc/security/access.conf default to no remote access.
  * Use pam_xauthority.so by default.

 -- Tim Abbott <tabbott@mit.edu>  Wed, 12 Dec 2007 22:41:02 -0500

debathena-pam-config (1.3debathena1) unstable; urgency=low

  * Make /etc/pam.d/{login,ssh,gdm} include pam_access.so
  * Add pam_debathena_home_type.so /etc/pam.d/common-session

 -- Tim Abbott <tabbott@mit.edu>  Tue, 13 Nov 2007 01:19:19 -0500

debathena-pam-config (1.2debathena2) unstable; urgency=low

  * Base original configuration on libpam-runtime templates.

 -- Anders Kaseorg <andersk@mit.edu>  Thu, 06 Sep 2007 01:57:27 -0400

debathena-pam-config (1.2debathena1) unstable; urgency=low

  * Rebuild against debathena-config-build-common 3.4.

 -- Anders Kaseorg <andersk@mit.edu>  Mon, 06 Aug 2007 21:57:15 -0400

debathena-pam-config (1.2) unstable; urgency=low
