@@ -1,8 +1,12 @@
 debathena-pam-config (1.4) unstable; urgency=low
 
-  * Convert (partially) to the new config-package-dev interface
+  [ Shreevatsa R ]
+  * Convert (mostly) to the new config-package-dev interface
 
- -- Shreevatsa R <vatsa@mit.edu>  Sun,  6 Apr 2008 20:51:08 -0400
+  [ Tim Abbott ]
+  * Handle /etc/pam.d/ssh => /etc/pam.d/sshd rename in Debian upstream.
+
+ -- Tim Abbott <tabbott@mit.edu>  Sun, 06 Apr 2008 22:17:16 -0400
 
 debathena-pam-config (1.3debathena5) unstable; urgency=low
 
